change database from mysql to postgres

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,10 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  timeout: 5000
 
 development:
   <<: *default
@@ -50,5 +48,3 @@ test:
 production:
   <<: *default
   database: moviestore_production
-  username: moviestore
-  password: <%= ENV['MOVIESTORE_DATABASE_PASSWORD'] %>
